--- a/app/templates/go.html
+++ b/app/templates/go.html
@@ -10,7 +10,7 @@
 {% block content %}
     <h1 class="text-center">Result</h1>
         <ul class="list-group">
-            {% for category, classification in classification_result.items() %}
+            {% for category, classification in classification_result %}
                 {% if classification == 1 %}
                     <li class="list-group-item list-group-item-success text-center">{{category.replace('_', ' ').title()}}</li>
                 {% else %}
